--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@inrupt/solid-client-authn-core": "^1.12.2",
+    "cross-fetch": "^4.0.0",
     "node-fetch": "^2.6.7"
   },
   "devDependencies": {
